# ASCIILib

./: .gitignore  CMakeLists.txt  README.md  ideas.txt  output.txt
docs/: ideas.txt
examples/image-converter/src/: main.c
font-data/: bitmap.json  savefont.py
include/ASCIILib/: ASCIILib.h
scripts/: build.sh  run-image-converter.sh
src/ASCIILib/: ASCIILib.c
